--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
 	<groupId>org.st-js.bridge</groupId>
 	<artifactId>parent-pom</artifactId>
-	<packaging>jar</packaging>
-	<version>1.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>Strongly-typed Javascript:Parent POM for Bridges</name>
 
 	<developers>
