--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.st-js.bridge</groupId>
 	<artifactId>parent-pom</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>Strongly-typed Javascript:Parent POM for Bridges</name>
 
 	<developers>
@@ -44,31 +45,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.4.1</version>
-					<executions>
-						<execution>
-							<id>prepare</id>
-							<configuration>
-								<mavenExecutorId>forked-path</mavenExecutorId>
-								<useReleaseProfile>false</useReleaseProfile>
-								<arguments>-Psonatype-oss-release-prepare</arguments>
-							</configuration>
-							<goals>
-								<goal>prepare</goal>
-							</goals>
-						</execution>
-						
-						<execution>
-							<id>perform</id>
-							<configuration>
-								<mavenExecutorId>forked-path</mavenExecutorId>
-								<useReleaseProfile>false</useReleaseProfile>
-								<arguments>-Psonatype-oss-release-perform -Dgpg.passphrase=${gpg.passphrase}</arguments>
-							</configuration>
-							<goals>
-								<goal>perform</goal>
-							</goals>
-						</execution>
-					</executions>
+					<configuration>
+						<mavenExecutorId>forked-path</mavenExecutorId>
+						<useReleaseProfile>false</useReleaseProfile>
+						<arguments>-Psonatype-oss-release-stjs</arguments>
+					</configuration>
 				</plugin>
 
 				<!-- add the ST-JS marker to the library -->
@@ -89,9 +70,9 @@
 	</build>
 
 	<profiles>
-		<!-- this is for release:prepare overrides the oss one to skip signature -->
+		<!-- this overrides the oss one to skip signature -->
 		<profile>
-			<id>sonatype-oss-release-prepare</id>
+			<id>sonatype-oss-release-stjs</id>
 			<build>
 				<plugins>
 					<plugin>
@@ -120,15 +101,7 @@
 							</execution>
 						</executions>
 					</plugin>
-				</plugins>
-			</build>
-		</profile>
 
-		<!-- this is for release perform -->
-		<profile>
-			<id>sonatype-oss-release-perform</id>
-			<build>
-				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
@@ -139,7 +112,7 @@
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
-								<phase>verify</phase>
+								<phase>deploy</phase>
 								<goals>
 									<goal>sign</goal>
 								</goals>
@@ -155,6 +128,6 @@
 		<connection>scm:git:http://github.com/st-js/bridge-parent-pom.git</connection>
 		<developerConnection>scm:git:http://github.com/st-js/bridge-parent-pom.git</developerConnection>
 		<url>scm:git:http://github.com/st-js/bridge-parent-pom.git</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 </project>
