--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.st-js.bridge</groupId>
 	<artifactId>parent-pom</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>Strongly-typed Javascript:Parent POM for Bridges</name>
 
 	<developers>
@@ -111,18 +111,12 @@
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
-								<phase>deploy</phase>
+								<phase>install</phase>
 								<goals>
 									<goal>sign</goal>
 								</goals>
 							</execution>
 						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-deploy-plugin</artifactId>
-						<version>2.7</version>
 					</plugin>
 				</plugins>
 			</build>
