--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 					<configuration>
 						<mavenExecutorId>forked-path</mavenExecutorId>
 						<useReleaseProfile>false</useReleaseProfile>
-						<arguments>-Psonatype-oss-release-stjs -Dgpg.passphrase=${gpg.passphrase}</arguments>
+						<arguments>-Psonatype-oss-release-stjs</arguments>
 					</configuration>
 				</plugin>
 
@@ -114,9 +114,6 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
 						<version>1.4</version>
-						<configuration>
-							<passphrase>${gpg.passphrase}</passphrase>
-						</configuration>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
